<resources>
    <string name="app_name">BalatonApp</string>
    <string name="my_image_description">Main header picture</string>
    <string name="loginOrRegisterText">Jelentkezzen be vagy regisztráljon az alkalmazás használatához!</string>
    <string name="email">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="cim">Üdvözöljük!</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="fullName">Felhasználónév</string>
    <string name="registration_title">Regisztráció</string>
    <string name="welcome">Üdvözlünk a BalatonAppban!</string>
    <string name="in_progress">Fejlesztés alatt</string>
    <string name="logout">Kijelentkezés</string>
    <string name="back">Vissza</string>
    <string name="registration_button_description">Regisztáció gomb</string>
    <string name="back_button_description">Vissza a főoldalra</string>
    <string name="sights">Látnivalók</string>
    <string name="events">Programok</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="home">Főoldal</string>
    <string name="news_list">Hírek</string>
    <string name="news">Hírek</string>
    <string name="menu_favorites">Kedvencek</string>
    <string name="no_favorites">Nincsenek kedvencek</string>
    <string name="error_fetching_favorites">Hiba a kedvencek betöltésénél</string>
    <string name="expand">Tovább</string>
    <string name="collapse">Bezár</string>
    <string name="menu_home">Főoldal</string>
    <string name="add_favorite">Kedvenc</string>
    <string name="in_favorites">Kedvencek közt</string>
    <string name="remove_favorite">Eltávolítás</string>
    <string name="menu_btn">Menü gomb</string>
    <string name="events_list">Események listája</string>
    <string name="all">Mind</string>
    <string name="comment">Megjegyzés</string>
    <string name="sights_list">Látnivalók listája\n</string>
    <string name="event_name">Esemény címe</string>
    <string name="place">Helyszín</string>
    <string name="date">Dátum</string>
    <string name="string">Leírás szövege</string>
    <string name="string_continue">Tovább</string>
    <string name="event_picture">Esemény képe</string>
    <string name="favorite_delete">Törlés</string>
    <string name="title">Cím</string>
    <string name="write_comment">Megjegyzés írása...</string>
    <string name="save">Mentés</string>
    <string name="news_name">Cikk címe</string>
    <string name="pre_news">Rövid kivonat a cikkből</string>
    <string name="open">Megnyitás</string>
    <string name="news_picture">Hírhez tartozó kép\n</string>
    <string name="sight_picture">Látnivaló kép\n</string>
    <string name="favorites_menu_title">Kedvencek</string>
    <string name="add_favorites">Kedvencekhez adás</string>

</resources>