<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_btn_icon"
        android:icon="@drawable/menu_btn"
        android:title="Menü"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sights"
        android:title="@string/sights"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_news"
        android:title="@string/news"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_favorites"
        android:title="Kedvencek"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
