<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="48dp"
            android:scaleType="fitCenter"
            android:src="@drawable/balaton_app"
            android:contentDescription="@string/my_image_description"
            android:alpha="1" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/devText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progress"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginTop="16dp" />
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/logout"
            android:backgroundTint="@color/button_color"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
