<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:background="@drawable/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/balaton_app"
        android:contentDescription="@string/my_image_description"
        android:alpha="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/registrationHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/registration_title"
        android:textColor="#1B3B4D"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextEmailRegistration"
        android:minWidth="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#16181B"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/registrationHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextFullName"
        android:minWidth="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/fullName"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#16181B"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:minWidth="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#16181B"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/editTextFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordAgain"
        android:minWidth="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/passwordAgain"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#16181B"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/registrationButton"
        android:contentDescription="@string/registration_button_description"
        android:minWidth="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/button_color"
        android:padding="12dp"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordAgain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:minWidth="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/back"
        android:backgroundTint="@color/button_color"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresent"
        app:layout_constraintTop_toBottomOf="@id/registrationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
